# salary_dgs

./: Dockerfile  docker-compose.yml  main_bot.py  pyproject.toml  requirements.txt
bot/: bot.py  inline_yes_button.py  main_bot.py  states.py
src/: main.py
src/bot/: commands.py  handlers.py  keyboards.py  promt_for_state.py
src/salary_dgs/: bot.py  cache_decorator.py  constant.py  models.py  proba.py  services.py  validate_dekarators.py
