[project]
name = "salary-dgs"
version = "0.1.0"
description = "Telegram bot for salary calculations"
authors = [
  { name = "Александр Струльков", email = "astrulkov@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework-simplejwt>=5.5.0,<6.0.0",
    "black>=25.1.0,<26.0.0",
    "aiogram>=3.20.0.post0,<4.0.0",
    "python-dotenv>=1.1.0,<2.0.0"
]

[tool.poetry]
packages = [{ include = "salary_dgs" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"